Bug: Fixed bug causing whitespace on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,8 +197,8 @@ body {
 }
 
 .border-margin {
-    margin-top: 10px;
-    max-height: 380px;
+    margin-top: 7px;
+    max-height: 386px;
     border: 2px solid #00ccff;
     margin-bottom: 40px;
 }
@@ -389,6 +389,9 @@ label {
         padding-bottom: 15px;
         padding-top: 20px;
     }
+    .release-container {
+        padding-top: 0;
+    }
     .responsive-title {
         margin-top: 52px;
         margin-bottom: 0px;
@@ -476,7 +479,7 @@ label {
         margin-top: 90vh;
     }
     .responsive-title {
-        margin-top: 32px;
+        margin-top: 18px;
         margin-bottom: 0px;
     }
     .border-margin {
@@ -496,5 +499,11 @@ label {
         padding-top: 5px;
         padding-bottom: 0px;
         margin-bottom: 0px;
+    }
+    .responsive-title-discography {
+        padding-top: 40px;
+    }
+    .contact-title>h1 {
+        margin-top: 90px;
     }
 }
